fixed alignments and html structure

--- a/style.css
+++ b/style.css
@@ -207,11 +207,11 @@ h2.mainTitle {
 }
 
 .atribute {
-  margin: 1rem;
+  margin: 1.5rem;
   padding: 2rem;
   background: rgba(0, 0, 0, 1);
   border-radius: 1rem;
-  width: 200px;
+  width: 215px;
   height: 250px;
 }
 .atributes{
@@ -250,12 +250,17 @@ h2.mainTitle {
   padding: 1rem;
 }
 
+.languages {
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .languages li {
   list-style: none;
-  margin: auto;
+  
   font-size: 200%;
-  text-align: right;
-  padding-right: 100px;
+
 }
 
 .languages i {
@@ -291,10 +296,9 @@ h2.mainTitle {
  flex-wrap: wrap;
  padding:1rem;
  align-items: flex-start;
- width: 80%;
  margin: auto;
  background: black;
- border-radius: 3rem;
+ border-radius: 2rem;
 
  margin: 3rem auto;
 }
@@ -307,6 +311,7 @@ h2.mainTitle {
   margin: 2rem;
   padding: 1rem;
   height: 350px;
+  width:287px;
   box-shadow: 4px 6px 9px rgba(0, 0, 0, 0.5);
 }
 
